mobile version + different html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <header>
 <ul class="nav-list">
-    <li><img src="images/logo.png" class="img"></li>
+    <li><img src="images/logo.png" class="header-logo"id="img"></li>
     <li>OUR STORY</li>
     <li>CONTACT</li>
     <li>UNDERSTANDING NIL</li>
@@ -21,6 +21,13 @@
     </li>
 </ul>
 <header>
+    <div class="full-screen-menu">
+        <ul>
+            <li>Projects</li>
+            <li>About Me</li>
+            <li>Contact</li>
+        </ul>
+    </div>
 <body>
 <div class="landing-page">
 <img src="images/blurline.png" class="blurline">
@@ -36,42 +43,6 @@
     
 </div>
 
-<script>
-  
-  document.addEventListener("DOMContentLoaded", function() {
-            const container = document.querySelector('.image-container');
-            const images = document.querySelectorAll('.moving-image');
-            const speed = 1; // Adjust the speed as needed
-
-            function moveImages() {
-                images.forEach((image) => {
-                    const currentLeft = parseFloat(window.getComputedStyle(image).left);
-                    image.style.left = `${currentLeft + speed}px`;
-
-                    // If the image moves off the right side, reposition it to the left side
-                    if (currentLeft > container.offsetWidth) {
-                        image.style.left = `-${image.offsetWidth}px`;
-                    }
-                });
-            }
-
-            function initialize() {
-                images.forEach((image, index) => {
-                    image.style.position = 'absolute';
-                    image.style.left = `${index * (image.offsetWidth + 20)}px`; // Initial position with spacing
-                });
-
-                setInterval(moveImages, 10); // Move images every 10ms
-            }
-
-            initialize();
-
-            // Refresh the page on window resize
-            window.addEventListener('resize', () => {
-                location.reload();
-            });
-        });
-    </script>
 </div>
 <div class="section-1">
 
@@ -128,6 +99,7 @@
         </ul>
     </div>
 </div>
+<script src="script.js"></script>
 </body>
 <footer>
     
