--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Home Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -52,9 +52,9 @@
     than ever before, it’s time these athletes, brands, and institutions get <br>
     the support they need to  navigate this dynamic market. </p>
     <ul class="redirectories">
-        <li class="redirect-button" id="athlete-button"><div class="skew-fix">I'M AN ATHLETE</div></li>
-        <li class="redirect-button" id="brand-button"><div class="skew-fix">I'M A BRAND</div></li>
-        <li class="redirect-button" id="university-button"><div class="skew-fix">I'M A UNIVERSITY</div></li>
+        <li class="redirect-button" id="athlete-button" onclick="window.location.href='signup.html'"><div class="skew-fix">I'M AN ATHLETE</div></li>
+        <li class="redirect-button" id="brand-button" onclick="window.location.href='signup.html'"><div class="skew-fix">I'M A BRAND</div></li>
+        <li class="redirect-button" id="university-button" onclick="window.location.href='signup.html'"><div class="skew-fix">I'M A UNIVERSITY</div></li>
     </ul>
 </div>
 
